k8s/apps/chaos-app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: chaos-app
  namespace: chaos-lab
  labels:
    app.kubernetes.io/name: chaos-app
    app.kubernetes.io/instance: chaos-app
    app.kubernetes.io/part-of: aks-chaos-lab
    app.kubernetes.io/component: gateway
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/version: "0.1.0"
  annotations: {}
spec:
  gatewayClassName: approuting-istio
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: chaos-app-gw-options
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: example.com
      allowedRoutes:
        namespaces:
          from: Same
