k8s/apps/chaos-app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chaos-app
  namespace: chaos-lab
  labels:
    app.kubernetes.io/name: chaos-app
    app.kubernetes.io/instance: chaos-app
    app.kubernetes.io/part-of: aks-chaos-lab
    app.kubernetes.io/component: httproute
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/version: "0.1.0"
spec:
  parentRefs:
    - name: chaos-app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: chaos-app
          port: 80
